Edit calculation of missing value percentages

--- a/Data cleaning 2- missing values.ipynb
+++ b/Data cleaning 2- missing values.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
       "AVG_READING_4_SCORE             533 non-null float64\n",
       "AVG_READING_8_SCORE             498 non-null float64\n",
       "dtypes: float64(22), int64(1), object(2)\n",
-      "memory usage: 279.8+ KB\n"
+      "memory usage: 291.5+ KB\n"
      ]
     }
    ],
@@ -323,49 +323,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PRIMARY_KEY                       0.000000\n",
-       "STATE                             0.000000\n",
-       "YEAR                              0.000000\n",
-       "ENROLL                           21.399512\n",
-       "TOTAL_REVENUE                    16.562500\n",
-       "FEDERAL_REVENUE                  16.562500\n",
-       "STATE_REVENUE                    16.562500\n",
-       "LOCAL_REVENUE                    16.562500\n",
-       "TOTAL_EXPENDITURE                16.562500\n",
-       "INSTRUCTION_EXPENDITURE          16.562500\n",
-       "SUPPORT_SERVICES_EXPENDITURE     16.562500\n",
-       "OTHER_EXPENDITURE                21.399512\n",
-       "CAPITAL_OUTLAY_EXPENDITURE       16.562500\n",
-       "GRADES_PK_G                      13.115997\n",
-       "GRADES_KG_G                       9.705882\n",
-       "GRADES_4_G                        9.625276\n",
-       "GRADES_8_G                        9.625276\n",
-       "GRADES_12_G                       9.625276\n",
-       "GRADES_1_8_G                      9.625276\n",
-       "GRADES_9_12_G                     9.625276\n",
-       "GRADES_ALL_G                     13.115997\n",
-       "AVG_MATH_4_SCORE                178.358209\n",
-       "AVG_MATH_8_SCORE                180.451128\n",
-       "AVG_READING_4_SCORE             179.924953\n",
-       "AVG_READING_8_SCORE             199.598394\n",
+       "PRIMARY_KEY                      0.000000\n",
+       "STATE                            0.000000\n",
+       "YEAR                             0.000000\n",
+       "ENROLL                          17.627346\n",
+       "TOTAL_REVENUE                   14.209115\n",
+       "FEDERAL_REVENUE                 14.209115\n",
+       "STATE_REVENUE                   14.209115\n",
+       "LOCAL_REVENUE                   14.209115\n",
+       "TOTAL_EXPENDITURE               14.209115\n",
+       "INSTRUCTION_EXPENDITURE         14.209115\n",
+       "SUPPORT_SERVICES_EXPENDITURE    14.209115\n",
+       "OTHER_EXPENDITURE               17.627346\n",
+       "CAPITAL_OUTLAY_EXPENDITURE      14.209115\n",
+       "GRADES_PK_G                     11.595174\n",
+       "GRADES_KG_G                      8.847185\n",
+       "GRADES_4_G                       8.780161\n",
+       "GRADES_8_G                       8.780161\n",
+       "GRADES_12_G                      8.780161\n",
+       "GRADES_1_8_G                     8.780161\n",
+       "GRADES_9_12_G                    8.780161\n",
+       "GRADES_ALL_G                    11.595174\n",
+       "AVG_MATH_4_SCORE                64.075067\n",
+       "AVG_MATH_8_SCORE                64.343164\n",
+       "AVG_READING_4_SCORE             64.276139\n",
+       "AVG_READING_8_SCORE             66.621984\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "education_df.isnull().sum()/education_df.count()*100"
+    "education_df.isnull().sum()/education_df.isnull().count()*100"
    ]
   },
   {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,47 +405,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PRIMARY_KEY                       0.000000\n",
-       "STATE                             0.000000\n",
-       "YEAR                              0.000000\n",
-       "ENROLL                           12.096168\n",
-       "TOTAL_REVENUE                    12.096168\n",
-       "FEDERAL_REVENUE                  12.096168\n",
-       "STATE_REVENUE                    12.096168\n",
-       "LOCAL_REVENUE                    12.096168\n",
-       "TOTAL_EXPENDITURE                12.096168\n",
-       "INSTRUCTION_EXPENDITURE          12.096168\n",
-       "SUPPORT_SERVICES_EXPENDITURE     12.096168\n",
-       "OTHER_EXPENDITURE                 2.825637\n",
-       "CAPITAL_OUTLAY_EXPENDITURE        0.268817\n",
-       "GRADES_PK_G                       0.268817\n",
-       "GRADES_KG_G                       0.268817\n",
-       "GRADES_4_G                        0.268817\n",
-       "GRADES_8_G                        0.268817\n",
-       "GRADES_12_G                       0.268817\n",
-       "GRADES_1_8_G                      0.674764\n",
-       "GRADES_9_12_G                     1.982228\n",
-       "GRADES_ALL_G                      4.189944\n",
-       "AVG_MATH_4_SCORE                178.358209\n",
-       "AVG_MATH_8_SCORE                180.451128\n",
-       "AVG_READING_4_SCORE             179.924953\n",
-       "AVG_READING_8_SCORE             199.598394\n",
+       "PRIMARY_KEY                      0.000000\n",
+       "STATE                            0.000000\n",
+       "YEAR                             0.000000\n",
+       "ENROLL                          10.790885\n",
+       "TOTAL_REVENUE                   10.790885\n",
+       "FEDERAL_REVENUE                 10.790885\n",
+       "STATE_REVENUE                   10.790885\n",
+       "LOCAL_REVENUE                   10.790885\n",
+       "TOTAL_EXPENDITURE               10.790885\n",
+       "INSTRUCTION_EXPENDITURE         10.790885\n",
+       "SUPPORT_SERVICES_EXPENDITURE    10.790885\n",
+       "OTHER_EXPENDITURE                2.747989\n",
+       "CAPITAL_OUTLAY_EXPENDITURE       0.268097\n",
+       "GRADES_PK_G                      0.268097\n",
+       "GRADES_KG_G                      0.268097\n",
+       "GRADES_4_G                       0.268097\n",
+       "GRADES_8_G                       0.268097\n",
+       "GRADES_12_G                      0.268097\n",
+       "GRADES_1_8_G                     0.670241\n",
+       "GRADES_9_12_G                    1.943700\n",
+       "GRADES_ALL_G                     4.021448\n",
+       "AVG_MATH_4_SCORE                64.075067\n",
+       "AVG_MATH_8_SCORE                64.343164\n",
+       "AVG_READING_4_SCORE             64.276139\n",
+       "AVG_READING_8_SCORE             66.621984\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2.isnull().sum()/df2.count()*100"
+    "df2.isnull().sum()/df2.isnull().count()*100"
    ]
   },
   {
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
        " 'VIRGIN_ISLANDS'}"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,47 +553,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "PRIMARY_KEY                       0.000000\n",
-       "STATE                             0.000000\n",
-       "YEAR                              0.000000\n",
-       "ENROLL                            3.539209\n",
-       "TOTAL_REVENUE                     3.539209\n",
-       "FEDERAL_REVENUE                   3.539209\n",
-       "STATE_REVENUE                     3.539209\n",
-       "LOCAL_REVENUE                     3.539209\n",
-       "TOTAL_EXPENDITURE                 3.899721\n",
-       "INSTRUCTION_EXPENDITURE           3.539209\n",
-       "SUPPORT_SERVICES_EXPENDITURE      3.539209\n",
-       "OTHER_EXPENDITURE                 3.539209\n",
-       "CAPITAL_OUTLAY_EXPENDITURE        3.539209\n",
-       "GRADES_PK_G                       7.338129\n",
-       "GRADES_KG_G                       7.338129\n",
-       "GRADES_4_G                        7.338129\n",
-       "GRADES_8_G                        7.338129\n",
-       "GRADES_12_G                       7.338129\n",
-       "GRADES_1_8_G                      4.555011\n",
-       "GRADES_9_12_G                     4.555011\n",
-       "GRADES_ALL_G                      6.343550\n",
-       "AVG_MATH_4_SCORE                178.358209\n",
-       "AVG_MATH_8_SCORE                180.451128\n",
-       "AVG_READING_4_SCORE             179.924953\n",
-       "AVG_READING_8_SCORE             199.598394\n",
+       "PRIMARY_KEY                      0.000000\n",
+       "STATE                            0.000000\n",
+       "YEAR                             0.000000\n",
+       "ENROLL                           3.418231\n",
+       "TOTAL_REVENUE                    3.418231\n",
+       "FEDERAL_REVENUE                  3.418231\n",
+       "STATE_REVENUE                    3.418231\n",
+       "LOCAL_REVENUE                    3.418231\n",
+       "TOTAL_EXPENDITURE                3.753351\n",
+       "INSTRUCTION_EXPENDITURE          3.418231\n",
+       "SUPPORT_SERVICES_EXPENDITURE     3.418231\n",
+       "OTHER_EXPENDITURE                3.418231\n",
+       "CAPITAL_OUTLAY_EXPENDITURE       3.418231\n",
+       "GRADES_PK_G                      6.836461\n",
+       "GRADES_KG_G                      6.836461\n",
+       "GRADES_4_G                       6.836461\n",
+       "GRADES_8_G                       6.836461\n",
+       "GRADES_12_G                      6.836461\n",
+       "GRADES_1_8_G                     4.356568\n",
+       "GRADES_9_12_G                    4.356568\n",
+       "GRADES_ALL_G                     5.965147\n",
+       "AVG_MATH_4_SCORE                64.075067\n",
+       "AVG_MATH_8_SCORE                64.343164\n",
+       "AVG_READING_4_SCORE             64.276139\n",
+       "AVG_READING_8_SCORE             66.621984\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df3.isnull().sum()/df3.count()*100"
+    "df3.isnull().sum()/df3.isnull().count()*100"
    ]
   },
   {
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
        "2017           265.632094  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1247,7 @@
        "2017           265.632094  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1283,24 +1283,24 @@
        "PRIMARY_KEY                      0.000000\n",
        "STATE                            0.000000\n",
        "YEAR                             0.000000\n",
-       "ENROLL                          21.399512\n",
-       "TOTAL_REVENUE                   16.562500\n",
-       "FEDERAL_REVENUE                 16.562500\n",
-       "STATE_REVENUE                   16.562500\n",
-       "LOCAL_REVENUE                   16.562500\n",
-       "TOTAL_EXPENDITURE               16.562500\n",
-       "INSTRUCTION_EXPENDITURE         16.562500\n",
-       "SUPPORT_SERVICES_EXPENDITURE    16.562500\n",
-       "OTHER_EXPENDITURE               21.399512\n",
-       "CAPITAL_OUTLAY_EXPENDITURE      16.562500\n",
-       "GRADES_PK_G                     13.115997\n",
-       "GRADES_KG_G                      9.705882\n",
-       "GRADES_4_G                       9.625276\n",
-       "GRADES_8_G                       9.625276\n",
-       "GRADES_12_G                      9.625276\n",
-       "GRADES_1_8_G                     9.625276\n",
-       "GRADES_9_12_G                    9.625276\n",
-       "GRADES_ALL_G                    13.115997\n",
+       "ENROLL                          17.627346\n",
+       "TOTAL_REVENUE                   14.209115\n",
+       "FEDERAL_REVENUE                 14.209115\n",
+       "STATE_REVENUE                   14.209115\n",
+       "LOCAL_REVENUE                   14.209115\n",
+       "TOTAL_EXPENDITURE               14.209115\n",
+       "INSTRUCTION_EXPENDITURE         14.209115\n",
+       "SUPPORT_SERVICES_EXPENDITURE    14.209115\n",
+       "OTHER_EXPENDITURE               17.627346\n",
+       "CAPITAL_OUTLAY_EXPENDITURE      14.209115\n",
+       "GRADES_PK_G                     11.595174\n",
+       "GRADES_KG_G                      8.847185\n",
+       "GRADES_4_G                       8.780161\n",
+       "GRADES_8_G                       8.780161\n",
+       "GRADES_12_G                      8.780161\n",
+       "GRADES_1_8_G                     8.780161\n",
+       "GRADES_9_12_G                    8.780161\n",
+       "GRADES_ALL_G                    11.595174\n",
        "AVG_MATH_4_SCORE                 0.000000\n",
        "AVG_MATH_8_SCORE                 0.000000\n",
        "AVG_READING_4_SCORE              0.000000\n",
@@ -1308,13 +1308,13 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df4.isnull().sum()/df4.count()*100"
+    "df4.isnull().sum()/df4.isnull().count()*100"
    ]
   },
   {
@@ -1434,7 +1434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
